--- a/angular.json
+++ b/angular.json
@@ -171,6 +171,41 @@
           }
         }
       }
+    },
+    "my-app-lib": {
+      "projectType": "library",
+      "root": "projects/my-app-lib",
+      "sourceRoot": "projects/my-app-lib/src",
+      "prefix": "test",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/my-app-lib/tsconfig.lib.json",
+            "project": "projects/my-app-lib/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/my-app-lib/src/test.ts",
+            "tsConfig": "projects/my-app-lib/tsconfig.spec.json",
+            "karmaConfig": "projects/my-app-lib/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/my-app-lib/tsconfig.lib.json",
+              "projects/my-app-lib/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "cli": {
