--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^8.2.14",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
@@ -27,10 +28,12 @@
     "@ionic/storage": "^2.2.0",
     "cordova-browser": "6.0.0",
     "core-js": "^2.5.4",
+    "igniteui-angular": "^8.2.10",
     "ionic-angular": "^3.9.9",
     "rxjs": "~6.5.1",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
