--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/http": "^5.17.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "chart.js": "^2.9.3",
     "cordova-browser": "6.0.0",
+    "cordova-plugin-advanced-http": "^2.2.0",
+    "cordova-plugin-file": "^6.0.2",
     "core-js": "^2.5.4",
     "igniteui-angular": "^8.2.10",
     "ionic-angular": "^3.9.9",
@@ -80,7 +84,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "browser"
