--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.14",
-    "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/core": "~8.1.2",
-    "@angular/forms": "~8.1.2",
-    "@angular/platform-browser": "~8.1.2",
-    "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
+    "@angular/common": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/http": "^5.17.1",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -34,6 +33,8 @@
     "core-js": "^2.5.4",
     "igniteui-angular": "^8.2.10",
     "ionic-angular": "^3.9.9",
+    "ngx-select-dropdown": "^1.3.1",
+    "ngx-select-ex": "^3.7.6",
     "rxjs": "~6.5.1",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.9.0",
@@ -42,13 +43,13 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular-devkit/build-angular": "^0.801.2",
     "@angular-devkit/build-ng-packagr": "~0.801.3",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/compiler-cli": "~8.1.2",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
     "@ionic/lab": "2.0.11",
