--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "chart.js": "^2.9.3",
-    "cordova-browser": "6.0.0",
+    "cordova-android": "^8.1.0",
+    "cordova-browser": "^6.0.0",
     "cordova-plugin-advanced-http": "^2.2.0",
     "cordova-plugin-file": "^6.0.2",
     "core-js": "^2.5.4",
@@ -89,6 +90,7 @@
       "cordova-plugin-advanced-http": {}
     },
     "platforms": [
+      "android",
       "browser"
     ]
   }
