--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "chart.js": "^2.9.3",
-    "cordova-android": "^8.1.0",
-    "cordova-browser": "6.0.0",
+    "cordova-browser": "^6.0.0",
     "cordova-plugin-advanced-http": "^2.2.0",
     "cordova-plugin-file": "^6.0.2",
     "core-js": "^2.5.4",
@@ -85,9 +84,13 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
+      }
     },
     "platforms": [
       "browser"
